src/objects/Customer_Info_External_c__x.object
<CustomObject>
    <fields>
        <fullName>marital_status__c</fullName>
        <externalDeveloperName>marital_status</externalDeveloperName>
        <label>Marital status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>market_adw__c</fullName>
        <externalDeveloperName>market_adw</externalDeveloperName>
        <label>Market adw</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>market_cd__c</fullName>
        <externalDeveloperName>market_cd</externalDeveloperName>
        <label>Market cd</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>market_type__c</fullName>
        <externalDeveloperName>market_type</externalDeveloperName>
        <label>Market type</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>match_type__c</fullName>
        <externalDeveloperName>match_type</externalDeveloperName>
        <label>Match type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>middle_init__c</fullName>
        <externalDeveloperName>middle_init</externalDeveloperName>
        <label>Middle init</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mileage__c</fullName>
        <externalDeveloperName>mileage</externalDeveloperName>
        <label>Mileage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modifier__c</fullName>
        <externalDeveloperName>modifier</externalDeveloperName>
        <label>Modifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modifier_location__c</fullName>
        <externalDeveloperName>modifier_location</externalDeveloperName>
        <label>Modifier location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modifier_login__c</fullName>
        <externalDeveloperName>modifier_login</externalDeveloperName>
        <label>Modifier login</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modifier_workstation__c</fullName>
        <externalDeveloperName>modifier_workstation</externalDeveloperName>
        <label>Modifier workstation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>msa_cd__c</fullName>
        <externalDeveloperName>msa_cd</externalDeveloperName>
        <label>Msa code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>my_last_contact_dt__c</fullName>
        <externalDeveloperName>my_last_contact_dt</externalDeveloperName>
        <label>My last contact date</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nbr_yr_emply__c</fullName>
        <externalDeveloperName>nbr_yr_emply</externalDeveloperName>
        <label>Nbr yr emply</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nick_name__c</fullName>
        <externalDeveloperName>nick_name</externalDeveloperName>
        <label>Nick name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>note_pad__c</fullName>
        <externalDeveloperName>note_pad</externalDeveloperName>
        <label>Note pad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>note_pad_id__c</fullName>
        <externalDeveloperName>note_pad_id</externalDeveloperName>
        <label>Note pad id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>note_pad_priority__c</fullName>
        <externalDeveloperName>note_pad_priority</externalDeveloperName>
        <label>Note pad priority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>note_pad_status__c</fullName>
        <externalDeveloperName>note_pad_status</externalDeveloperName>
        <label>Note pad status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>notes__c</fullName>
        <externalDeveloperName>notes</externalDeveloperName>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>occupation__c</fullName>
        <externalDeveloperName>occupation</externalDeveloperName>
        <label>Occupation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>offer_rdm_flag__c</fullName>
        <externalDeveloperName>offer_rdm_flag</externalDeveloperName>
        <label>Offer rdm flag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>offer_reserved__c</fullName>
        <externalDeveloperName>offer_reserved</externalDeveloperName>
        <label>Offer reserved</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ofr_freq__c</fullName>
        <externalDeveloperName>ofr_freq</externalDeveloperName>
        <label>Ofr freq</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ok2ask_flag__c</fullName>
        <externalDeveloperName>ok2ask_flag</externalDeveloperName>
        <label>Ok2ask flag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>original_dmid__c</fullName>
        <externalDeveloperName>original_dmid</externalDeveloperName>
        <label>Original dmid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>outcome__c</fullName>
        <externalDeveloperName>outcome</externalDeveloperName>
        <label>Outcome</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>outcome_desc__c</fullName>
        <externalDeveloperName>outcome_desc</externalDeveloperName>
        <label>Outcome description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>outcome_more__c</fullName>
        <externalDeveloperName>outcome_more</externalDeveloperName>
        <label>Outcome more</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>outcome_notes__c</fullName>
        <externalDeveloperName>outcome_notes</externalDeveloperName>
        <label>Outcome notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>outstand_credit__c</fullName>
        <externalDeveloperName>outstand_credit</externalDeveloperName>
        <label>Outstand credit</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>owner_flag__c</fullName>
        <externalDeveloperName>owner_flag</externalDeveloperName>
        <label>Owner flag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>patron_id__c</fullName>
        <externalDeveloperName>patron_id</externalDeveloperName>
        <label>Patron id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>patron_rep_appv__c</fullName>
        <externalDeveloperName>patron_rep_appv</externalDeveloperName>
        <label>Patron rep appv</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pci_cd__c</fullName>
        <externalDeveloperName>pci_cd</externalDeveloperName>
        <label>Pci code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pcs_address_id__c</fullName>
        <externalDeveloperName>pcs_address_id</externalDeveloperName>
        <label>Pcs address id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pcs_phone_id__c</fullName>
        <externalDeveloperName>pcs_phone_id</externalDeveloperName>
        <label>Pcs phone id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>phone__c</fullName>
        <externalDeveloperName>phone</externalDeveloperName>
        <label>Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>phone_contact_dt_by_all__c</fullName>
        <externalDeveloperName>phone_contact_dt_by_all</externalDeveloperName>
        <label>Phone contact date by all</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>phone_status__c</fullName>
        <externalDeveloperName>phone_status</externalDeveloperName>
        <label>Phone status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>phone_type__c</fullName>
        <externalDeveloperName>phone_type</externalDeveloperName>
        <label>Phone type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>plays_with_dmid__c</fullName>
        <externalDeveloperName>plays_with_dmid</externalDeveloperName>
        <label>Plays with dmid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pos_flag__c</fullName>
        <externalDeveloperName>pos_flag</externalDeveloperName>
        <label>Pos flag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>posted_on__c</fullName>
        <externalDeveloperName>posted_on</externalDeveloperName>
        <label>Posted on</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pred_hotel_day__c</fullName>
        <externalDeveloperName>pred_hotel_day</externalDeveloperName>
        <label>Pred hotel day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pred_hotel_trip__c</fullName>
        <externalDeveloperName>pred_hotel_trip</externalDeveloperName>
        <label>Pred hotel trip</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pred_worth__c</fullName>
        <externalDeveloperName>pred_worth</externalDeveloperName>
        <label>Pred worth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pref_category_name__c</fullName>
        <externalDeveloperName>pref_category_name</externalDeveloperName>
        <label>Pref category name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pref_flag__c</fullName>
        <externalDeveloperName>pref_flag</externalDeveloperName>
        <label>Pref flag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pref_language__c</fullName>
        <externalDeveloperName>pref_language</externalDeveloperName>
        <label>Pref language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pref_suppress_flag__c</fullName>
        <externalDeveloperName>pref_suppress_flag</externalDeveloperName>
        <label>Pref suppress flag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pref_type_name__c</fullName>
        <externalDeveloperName>pref_type_name</externalDeveloperName>
        <label>Pref type name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>preference_id__c</fullName>
        <externalDeveloperName>preference_id</externalDeveloperName>
        <label>Preference id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>preferred_contact_channel__c</fullName>
        <externalDeveloperName>preferred_contact_channel</externalDeveloperName>
        <label>Preferred contact channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>prep_trips__c</fullName>
        <externalDeveloperName>prep_trips</externalDeveloperName>
        <label>Prep trips</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>prev_tier_score__c</fullName>
        <externalDeveloperName>prev_tier_score</externalDeveloperName>
        <label>Prev tier score</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>private__c</fullName>
        <externalDeveloperName>private</externalDeveloperName>
        <label>Private</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>promo_base__c</fullName>
        <externalDeveloperName>promo_base</externalDeveloperName>
        <label>Promo base</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>prop_cd__c</fullName>
        <externalDeveloperName>prop_cd</externalDeveloperName>
        <label>Property code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>prop_mail_cd__c</fullName>
        <externalDeveloperName>prop_mail_cd</externalDeveloperName>
        <label>Prop mail code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>purge_react__c</fullName>
        <externalDeveloperName>purge_react</externalDeveloperName>
        <label>Purge react</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qual_cat__c</fullName>
        <externalDeveloperName>qual_cat</externalDeveloperName>
        <label>Qual cat</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qual_cd__c</fullName>
        <externalDeveloperName>qual_cd</externalDeveloperName>
        <label>Qual code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qual_chg_timestamp__c</fullName>
        <externalDeveloperName>qual_chg_timestamp</externalDeveloperName>
        <label>Qual chg timestamp</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qual_conf_timestamp__c</fullName>
        <externalDeveloperName>qual_conf_timestamp</externalDeveloperName>
        <label>Qual conf timestamp</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qual_hygiene_cd__c</fullName>
        <externalDeveloperName>qual_hygiene_cd</externalDeveloperName>
        <label>Qual hygiene code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qual_reason_cd__c</fullName>
        <externalDeveloperName>qual_reason_cd</externalDeveloperName>
        <label>Qual reason code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>quality_cd__c</fullName>
        <externalDeveloperName>quality_cd</externalDeveloperName>
        <label>Quality code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rank_value__c</fullName>
        <externalDeveloperName>rank_value</externalDeveloperName>
        <label>Rank value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rating_flag__c</fullName>
        <externalDeveloperName>rating_flag</externalDeveloperName>
        <label>Rating flag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rel_dob__c</fullName>
        <externalDeveloperName>rel_dob</externalDeveloperName>
        <label>Rel dob</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rel_name__c</fullName>
        <externalDeveloperName>rel_name</externalDeveloperName>
        <label>Rel name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rel_notes__c</fullName>
        <externalDeveloperName>rel_notes</externalDeveloperName>
        <label>Rel notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rel_status_cd__c</fullName>
        <externalDeveloperName>rel_status_cd</externalDeveloperName>
        <label>Rel status code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rel_type_cd__c</fullName>
        <externalDeveloperName>rel_type_cd</externalDeveloperName>
        <label>Rel type code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>relationship__c</fullName>
        <externalDeveloperName>relationship</externalDeveloperName>
        <label>Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rep_cd__c</fullName>
        <externalDeveloperName>rep_cd</externalDeveloperName>
        <label>Rep code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rep_id__c</fullName>
        <externalDeveloperName>rep_id</externalDeveloperName>
        <label>Rep id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rep_rank__c</fullName>
        <externalDeveloperName>rep_rank</externalDeveloperName>
        <label>Rep rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rep_trip_nbr__c</fullName>
        <externalDeveloperName>rep_trip_nbr</externalDeveloperName>
        <label>Rep trip nbr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rep_type__c</fullName>
        <externalDeveloperName>rep_type</externalDeveloperName>
        <label>Rep type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>req_dmid__c</fullName>
        <externalDeveloperName>req_dmid</externalDeveloperName>
        <label>Req dmid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>req_employee__c</fullName>
        <externalDeveloperName>req_employee</externalDeveloperName>
        <label>Req employee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>req_prop_cd__c</fullName>
        <externalDeveloperName>req_prop_cd</externalDeveloperName>
        <label>Req prop code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>response__c</fullName>
        <externalDeveloperName>response</externalDeveloperName>
        <label>Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>room_type__c</fullName>
        <externalDeveloperName>room_type</externalDeveloperName>
        <label>Room type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>secondary_dmid__c</fullName>
        <externalDeveloperName>secondary_dmid</externalDeveloperName>
        <label>Secondary dmid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>send_notification__c</fullName>
        <externalDeveloperName>send_notification</externalDeveloperName>
        <label>Send notification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sic_cd__c</fullName>
        <externalDeveloperName>sic_cd</externalDeveloperName>
        <label>Sic code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smoking__c</fullName>
        <externalDeveloperName>smoking</externalDeveloperName>
        <label>Smoking</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>source__c</fullName>
        <externalDeveloperName>source</externalDeveloperName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>source_file__c</fullName>
        <externalDeveloperName>source_file</externalDeveloperName>
        <label>Source file</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>spcl_instruction__c</fullName>
        <externalDeveloperName>spcl_instruction</externalDeveloperName>
        <label>Spcl instruction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>spcl_request__c</fullName>
        <externalDeveloperName>spcl_request</externalDeveloperName>
        <label>Spcl request</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssn__c</fullName>
        <externalDeveloperName>ssn</externalDeveloperName>
        <label>Ssn</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>state_cd__c</fullName>
        <externalDeveloperName>state_cd</externalDeveloperName>
        <label>State code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>state_name__c</fullName>
        <externalDeveloperName>state_name</externalDeveloperName>
        <label>State name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sub_ethnic_type__c</fullName>
        <externalDeveloperName>sub_ethnic_type</externalDeveloperName>
        <label>Sub ethnic type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>suffix__c</fullName>
        <externalDeveloperName>suffix</externalDeveloperName>
        <label>Suffix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>suggested_channel__c</fullName>
        <externalDeveloperName>suggested_channel</externalDeveloperName>
        <label>Suggested channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>task_id__c</fullName>
        <externalDeveloperName>task_id</externalDeveloperName>
        <label>Task id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tele_num__c</fullName>
        <externalDeveloperName>tele_num</externalDeveloperName>
        <label>Tele num</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tier_score__c</fullName>
        <externalDeveloperName>tier_score</externalDeveloperName>
        <label>Tier score</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>to_do_id__c</fullName>
        <externalDeveloperName>to_do_id</externalDeveloperName>
        <label>To do id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>to_do_notes__c</fullName>
        <externalDeveloperName>to_do_notes</externalDeveloperName>
        <label>To do notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>to_do_segment__c</fullName>
        <externalDeveloperName>to_do_segment</externalDeveloperName>
        <label>To do segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>to_do_status__c</fullName>
        <externalDeveloperName>to_do_status</externalDeveloperName>
        <label>To do status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>to_do_subject__c</fullName>
        <externalDeveloperName>to_do_subject</externalDeveloperName>
        <label>To do subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>to_do_type__c</fullName>
        <externalDeveloperName>to_do_type</externalDeveloperName>
        <label>To do type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>top1_value__c</fullName>
        <externalDeveloperName>top1_value</externalDeveloperName>
        <label>Top1 value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>top5_value__c</fullName>
        <externalDeveloperName>top5_value</externalDeveloperName>
        <label>Top5 value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>total_value__c</fullName>
        <externalDeveloperName>total_value</externalDeveloperName>
        <label>Total value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>trans_100_yr__c</fullName>
        <externalDeveloperName>trans_100_yr</externalDeveloperName>
        <label>Trans 100 yr</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trans_cal_dt__c</fullName>
        <externalDeveloperName>trans_cal_dt</externalDeveloperName>
        <label>Trans cal date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trans_time__c</fullName>
        <externalDeveloperName>trans_time</externalDeveloperName>
        <label>Trans time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>upd_run_id__c</fullName>
        <externalDeveloperName>upd_run_id</externalDeveloperName>
        <label>Upd run id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>update_dt__c</fullName>
        <externalDeveloperName>update_dt</externalDeveloperName>
        <label>Update date</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>user_amt_10__c</fullName>
        <externalDeveloperName>user_amt_10</externalDeveloperName>
        <label>User amt 10</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>user_amt_1__c</fullName>
        <externalDeveloperName>user_amt_1</externalDeveloperName>
        <label>User amt 1</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>user_amt_2__c</fullName>
        <externalDeveloperName>user_amt_2</externalDeveloperName>
        <label>User amt 2</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>user_flag_10__c</fullName>
        <externalDeveloperName>user_flag_10</externalDeveloperName>
        <label>User flag 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>user_flag_1__c</fullName>
        <externalDeveloperName>user_flag_1</externalDeveloperName>
        <label>User flag 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>user_flag_2__c</fullName>
        <externalDeveloperName>user_flag_2</externalDeveloperName>
        <label>User flag 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>user_score_10__c</fullName>
        <externalDeveloperName>user_score_10</externalDeveloperName>
        <label>User score 10</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>user_score_1__c</fullName>
        <externalDeveloperName>user_score_1</externalDeveloperName>
        <label>User score 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>user_score_2__c</fullName>
        <externalDeveloperName>user_score_2</externalDeveloperName>
        <label>User score 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vendor_code__c</fullName>
        <externalDeveloperName>vendor_code</externalDeveloperName>
        <label>Vendor code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>visit_flag__c</fullName>
        <externalDeveloperName>visit_flag</externalDeveloperName>
        <label>Visit flag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>w2g_flag__c</fullName>
        <externalDeveloperName>w2g_flag</externalDeveloperName>
        <label>W2g flag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>worth__c</fullName>
        <externalDeveloperName>worth</externalDeveloperName>
        <label>Worth</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xref_dmid__c</fullName>
        <externalDeveloperName>xref_dmid</externalDeveloperName>
        <label>Xref id</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>year__c</fullName>
        <externalDeveloperName>year</externalDeveloperName>
        <label>Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zip_3__c</fullName>
        <externalDeveloperName>zip_3</externalDeveloperName>
        <label>Zip 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zip_7__c</fullName>
        <externalDeveloperName>zip_7</externalDeveloperName>
        <label>Zip 7</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zip_cd__c</fullName>
        <externalDeveloperName>zip_cd</externalDeveloperName>
        <label>Zip code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zip_plus_4__c</fullName>
        <externalDeveloperName>zip_plus_4</externalDeveloperName>
        <label>Zip plus 4</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Customer Info</label>
    <pluralLabel>Customer Infos</pluralLabel>
</CustomObject>